--- a/src/components/App/rightBar/styles.module.scss
+++ b/src/components/App/rightBar/styles.module.scss
@@ -1,4 +1,31 @@
 .container{
     grid-area: rightBar;
     background-color: black; // Darker background for the top nav
+    width: 280px;
+    overflow: auto;
+
+    @media screen and (min-width: 1024px) {
+        width: 320px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 360px;
+    }
+}
+
+.container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: black;
+}
+
+.container::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: black;
+}
+
+.container::-webkit-scrollbar-thumb
+{
+	background-color: gray;
 }
