Search Component Update, Search Logic, Update Interceptor

--- a/src/layout/rootLayout/styles.module.scss
+++ b/src/layout/rootLayout/styles.module.scss
@@ -21,6 +21,7 @@ grid-template-columns: auto 1fr auto;
   overflow-x: hidden;
   scroll-behavior: smooth;
   box-sizing: border-box;
+  position: relative;
 
 
   &::-webkit-scrollbar{
