--- a/src/components/App/topBar/navigationBar/styles.module.scss
+++ b/src/components/App/topBar/navigationBar/styles.module.scss
@@ -3,10 +3,12 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    gap: 10px;
 }
 
 .link-container{
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
