--- a/src/components/App/bottomBar/playBar/styles.module.scss
+++ b/src/components/App/bottomBar/playBar/styles.module.scss
@@ -22,4 +22,14 @@
 .progress-bar-wrapper{
     width: 100%;
     padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.time{
+    font-size: 12px;
+    font-weight: 600;
+
 }
