--- a/src/pages/profile/styles.module.scss
+++ b/src/pages/profile/styles.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    padding-bottom: 200px;
 }
 
 .wrapper{
@@ -17,5 +18,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: white solid 1px;
 }
