--- a/src/components/Profile/InfoContainer/styles.module.scss
+++ b/src/components/Profile/InfoContainer/styles.module.scss
@@ -33,6 +33,9 @@
     height: 200px;
     width: 200px;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     img{
         width: 100%;
@@ -50,10 +53,16 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 10px;
 }
 
 .name{
-    font-size: 20px;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.role{
+    font-size: 18px;
     font-weight: 600;
 }
 
