--- a/src/components/Auth/Notation/styles.module.scss
+++ b/src/components/Auth/Notation/styles.module.scss
@@ -18,4 +18,5 @@
     font-weight: 400 !important;
     padding: 16px;
     font-size: 12px !important;
+    background-color: #292929 !important;
 }
