--- a/src/components/Payment/PlanCard/styles.module.scss
+++ b/src/components/Payment/PlanCard/styles.module.scss
@@ -70,6 +70,7 @@
     padding: 32px 12px !important;
     border-radius: 9999px !important;
     cursor: pointer;
+    color: white !important;
 
     &:hover{
         background-color: white !important;
