--- a/src/components/Profile/FollowContainer/styles.module.scss
+++ b/src/components/Profile/FollowContainer/styles.module.scss
@@ -15,9 +15,11 @@
 
 .label{
     font-size: 14px;
+    color: white !important;
 }
 
 .number{
     font-size: 24px;
     font-weight: 600;
+    color: white !important;
 }
