--- a/src/pages/artist/styles.module.scss
+++ b/src/pages/artist/styles.module.scss
@@ -20,3 +20,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.description{
+    max-width: 700px;
+    padding-left: 52px;
+    margin-top: 36px;
+}
