--- a/src/components/Album/TopInfo/styles.module.scss
+++ b/src/components/Album/TopInfo/styles.module.scss
@@ -40,7 +40,7 @@
   .title {
     font-size: 64px;
     font-weight: 700;
-    color: white;
+    color: white !important;
 
     @media screen and (min-width: 1024px) {
       font-size: 80px;
