--- a/src/components/App/bottomBar/bottomTrack/styles.module.scss
+++ b/src/components/App/bottomBar/bottomTrack/styles.module.scss
@@ -40,6 +40,7 @@
         font-size: 14px;
         font-weight: 600;
         cursor: pointer;
+        color: white !important;
     
         &:hover{
             text-decoration: underline;
@@ -51,7 +52,7 @@
         font-size: 10px;
         font-weight: 400;
         cursor: pointer;
-
+        color: white !important;
         &:hover{
             text-decoration: underline;
         }
