--- a/src/components/Shared/RowCard/styles.module.scss
+++ b/src/components/Shared/RowCard/styles.module.scss
@@ -6,6 +6,8 @@
     row-gap: 10px;
 }
 
+
+
 .top{
     width: 100%;
     display: flex;
@@ -18,12 +20,14 @@
     padding: 0 12px;
     font-size: 20px;
     font-weight: 600;
+    color: white !important;
 }
 
 .seeMore{
     font-size: 12px;
     font-weight: 500;
     cursor: pointer;
+    color: white !important;
 
     &:hover{
         text-decoration: underline;
@@ -34,4 +38,12 @@
     width: 100%;
     display: flex;
     align-items: flex-start;
+}
+
+.row-wrap{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    row-gap: 10px;
+    flex-wrap: wrap;
 }
