--- a/src/components/Profile/PlanContainer/styles.module.scss
+++ b/src/components/Profile/PlanContainer/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
   padding: 16px;
+  margin-top: 54px;
 }
 
 .wrapper {
@@ -63,6 +64,7 @@
   font-size: 28px;
   font-weight: 600;
   color: white;
+  text-transform: capitalize;
 }
 
 .btn {
