--- a/src/components/App/bottomBar/playBar/styles.module.scss
+++ b/src/components/App/bottomBar/playBar/styles.module.scss
@@ -6,7 +6,7 @@
     row-gap: 12px;
     width: 300px;
     padding-top: 10px;
-
+    position: relative;
     @media screen and (min-width: 1024px) {
         width: 500px;
     }
