--- a/src/components/App/bottomBar/styles.module.scss
+++ b/src/components/App/bottomBar/styles.module.scss
@@ -6,4 +6,5 @@
     display: grid;
     grid-template-columns: repeat(3, minmax(0, auto));
     justify-content: space-between;
+    position: relative;
 }
