--- a/src/components/App/rightBar/styles.module.scss
+++ b/src/components/App/rightBar/styles.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 
     @media screen and (min-width: 1024px) {
         width: 320px;
@@ -31,4 +32,21 @@
 .container::-webkit-scrollbar-thumb
 {
 	background-color: gray;
+}
+
+.loadingContainer{
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 280px;
+    @media screen and (min-width: 1024px) {
+        width: 320px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 360px;
+    }
 }
