--- a/src/components/App/topBar/searchBar/styles.module.scss
+++ b/src/components/App/topBar/searchBar/styles.module.scss
@@ -17,3 +17,11 @@
     width: 100%;
     color: white !important;
 }
+
+.cancel-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    border: white solid 1px;
+}
