--- a/src/components/Home/TabSection/CompilationTab/styles.module.scss
+++ b/src/components/Home/TabSection/CompilationTab/styles.module.scss
@@ -5,3 +5,11 @@
     row-gap: 32px;
     position: relative;
 }
+
+.loadingContainer{
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
