--- a/src/components/Queue/QueueList/styles.module.scss
+++ b/src/components/Queue/QueueList/styles.module.scss
@@ -4,6 +4,25 @@
     overflow-y: auto;
 
 }
+
+.container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: black;
+}
+
+.container::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: black;
+}
+
+.container::-webkit-scrollbar-thumb
+{
+	background-color: gray;
+}
+
+
 .active {
   background: rgba(255, 255, 255, 0.2);
 }
