--- a/src/components/Search/Container/AlbumContainer/styles.module.scss
+++ b/src/components/Search/Container/AlbumContainer/styles.module.scss
@@ -10,6 +10,7 @@
 .title{
     font-weight: 600;
     font-size: 18px;
+        color: white;
 }
 
 
@@ -70,6 +71,7 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 1;
+            color: white;
     }
 
     .release{
