--- a/src/components/Shared/MusicCard/styles.module.scss
+++ b/src/components/Shared/MusicCard/styles.module.scss
@@ -21,6 +21,13 @@
       rgba(255, 255, 255, 0.1)
     );
   }
+
+  @media screen and (min-width: 1200px) {
+    min-width: 200px;
+    width: 200px;
+    max-width: 200px;
+    height: 280px;
+  }
 }
 
 .img-wrapper {
