--- a/src/components/Shared/RowCard/styles.module.scss
+++ b/src/components/Shared/RowCard/styles.module.scss
@@ -21,6 +21,10 @@
     font-size: 20px;
     font-weight: 600;
     color: white !important;
+
+    @media screen and (min-width: 1000px) {
+        font-size: 22px;
+    }
 }
 
 .seeMore{
@@ -31,6 +35,10 @@
 
     &:hover{
         text-decoration: underline;
+    }
+
+    @media screen and (min-width: 1000px) {
+        font-size: 14px;
     }
 }
 
