--- a/src/components/Profile/InfoContainer/styles.module.scss
+++ b/src/components/Profile/InfoContainer/styles.module.scss
@@ -77,3 +77,15 @@
     font-size: 14px;
     color: white !important;
 }
+
+.edit-icon {
+    width: fit-content;
+    padding: 4px;
+    color: gray;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    :hover{
+        color: white;
+    }
+}
